--- a/style.css
+++ b/style.css
@@ -260,7 +260,9 @@ p {
     #Seller {
         display: none;
     }
-
+#produts{
+    margin-bottom: 50px;
+}
     #ending_flexity {
         display: block;
         display: flex;
@@ -432,7 +434,7 @@ p {
         object-fit: contain;
     }
     #imgs_jackets h2{
-        font-size: 20px;
+        font-size: 15px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 }
